Fix display on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -84,3 +84,10 @@ img {
 .site-content {
     margin-top: 2em;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .site-title .site-title__link {
+        margin-left: 0.5em;
+        font-size: 25px;
+    }
+}
